# qemu-command-builder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
generators/: cpu.pl  cpu_flags.pl  machine.pl
src/: accel.rs  acpitable.rs  action.rs  addfs.rs  audio.rs  audiodev.rs  blockdev.rs  boot.rs  chardev.rs  common.rs  compact.rs  cpu.rs  cpu_flags.rs  cpu_type.rs  device.rs  display.rs  drive.rs  fsdev.rs  fw_cfg.rs  global.rs  icount.rs  incoming.rs  iscsi.rs  lib.rs  machine.rs  machine_type.rs  memory.rs  mon.rs  msg.rs  name.rs  netdev.rs  numa.rs  object.rs  overcommit.rs  plugin.rs  rtc.rs  runwith.rs  sandbox.rs  serial.rs  set.rs  (+10 more)
tests/: complete.rs  cpu.rs
